refine apis to contain search and tradeUrl
